# velum

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
cli/: Cargo.toml  README.md
cli/src/: app.rs  lib.rs  main.rs  session.rs
cli/tests/: cli_modes.rs  session.rs
cli/tests/fixtures/: file_mode.js
crates/velum-macros/: Cargo.toml
crates/velum-macros/src/: class.rs  lib.rs  methods.rs  parse.rs
crates/velum-regexp/: Cargo.toml
crates/velum-regexp/src/: ast.rs  character_class.rs  compiler.rs  control.rs  error.rs  executor.rs  flags.rs  input.rs  lib.rs  limits.rs  match_result.rs  parser.rs  program.rs
crates/velum-regexp/src/executor/: consume.rs
crates/velum-regexp/src/parser/: class_parser.rs  escape_parser.rs  group_parser.rs  name_parser.rs  unicode_set_parser.rs
crates/velum-regexp/src/unicode/: generated_binary.rs  generated_case.rs  generated_core.rs  generated_general_category.rs  generated_script.rs  generated_script_extensions.rs  generated_string.rs  mod.rs
crates/velum-regexp/tests/: deterministic_fuzz.rs  engine_vertical_slice.rs  escape_semantics.rs  hard_resource_ceilings.rs  legacy_assertion_quantifiers.rs  modifier_semantics.rs  named_capture_alternatives.rs  native_integration_residuals.rs  repetition_semantics.rs  test262_lookbehind.rs  unicode_grammar.rs  unicode_sets.rs
crates/velum-regexp/unicode/: GENERATED-SHA256SUMS  SOURCES.manifest
crates/velum-tokio/: Cargo.toml
crates/velum-tokio/examples/: tokio_host_class.rs
crates/velum-tokio/src/: actor.rs  command.rs  error.rs  lib.rs  runtime.rs
crates/velum-tokio/tests/: runtime.rs
docs/: architecture-stabilization-plan.md  architecture.md  benchmarking.md  development-plan.md  optimization-execution-plan.md  project-plan.md  regexp-engine.md  roadmap.md  semantic-architecture-inventory.md  versioning.md
examples/: Cargo.toml  README.md  TODO.md
examples/00_hello_world/: main.rs
examples/01_basic_eval/: main.rs
examples/02_typed_host_functions/: main.rs
examples/03_async_rust_javascript_roundtrip/: main.rs
examples/04_callbacks_and_intervals/: main.rs
examples/05_rust_backed_websocket/: main.rs
examples/06_javascript_class_from_rust/: main.rs
examples/07_values_and_handles/: main.rs
examples/08_compile_once_run_many/: main.rs
examples/09_sandboxed_execution/: main.rs
examples/10_custom_module_loader/: main.rs
examples/11_promises_and_jobs/: main.rs
examples/12_realms_and_plugins/: main.rs
examples/13_shared_memory_between_vms/: main.rs
examples/14_observability_and_teardown/: main.rs
examples/15_host_type_multiple_vms/: main.rs
fuzzing-differential-test/: .gitignore  README.md  package-lock.json  package.json  run.sh
fuzzing-differential-test/driver/: Cargo.toml  build.rs
fuzzing-differential-test/driver/src/: artifacts.rs  compare.rs  coverage.c  diff_config.rs  engine262_worker.rs  lib.rs  node_worker.rs  reference_gap_predicates.rs  reference_gaps.rs  reference_gaps_tests.rs  report.rs  reprl.rs  time.rs
fuzzing-test/: .gitignore  FUZZILLI_REVISION  README.md  run.sh
fuzzing-test/driver/: Cargo.toml
fuzzing-test/driver/src/: main.rs  report.rs
fuzzing-test/driver/tests/: cache.rs  cli.rs  report.rs
fuzzing-test/velum-reprl/: Cargo.toml  build.rs
fuzzing-test/velum-reprl/src/: coverage.c  lib.rs  main.rs
fuzzing-test/velum-reprl/tests/: execution.rs  reprl_protocol.rs
reports/: benchmark-rollup.md
runner/: .gitignore  Cargo.toml  README.md  build.rs
runner/src/: bench_engines.rs  bench_measure.rs  bench_measure_tests.rs  benchmark_case.rs  benchmark_configuration_report.rs  benchmark_mode.rs  benchmark_protocol.rs  benchmark_selection.rs  benchmark_tests.rs  benchmarks.rs  build_info.rs  case_registry.rs  cases.rs  cases_benchmark.rs  cases_engine_runtime.rs  cases_quickjs.rs  cases_reporting.rs  cases_test262.rs  cases_test262_additions.rs  cases_test262_collections.rs  cases_test262_proxy.rs  cases_test262_reflect.rs  cases_test262_string.rs  cases_test262_typed_array.rs  embedding_benchmarks.rs  failure_classification.rs  host_benchmark_lock.rs  host_benchmark_lock_tests.rs  jetstream.rs  jetstream_baseline.rs  jetstream_cases.rs  jetstream_fixture.rs  jetstream_mode.rs  jetstream_model.rs  jetstream_preflight.rs  jetstream_report.rs  jetstream_selection.rs  jetstream_source.rs  jetstream_suite.rs  jetstream_tests.rs  (+38 more)
scripts/: check-architecture-boundaries.sh  check-correctness.sh  check-examples.sh  check-fast.sh  check-pr-commit-signatures.sh  check-regexp-unicode.sh  check-test262-focused.sh  check-touched-file-sizes.sh  check-vendored-regress.sh  check-version-bump.sh  prepare-quickjs.sh  prepare-test262.sh  publish-jetstream-report.sh  publish-report-artifact.sh  run-jetstream.sh  test-all.sh  test-jetstream-artifact-metadata.sh  test-report-artifact-metadata.sh  with-host-lock.sh
src/: ast.rs  atom.rs  binding_layout.rs  binding_layout_metadata.rs  binding_layout_types.rs  binding_layout_upvalues.rs  build_info.rs  bytecode.rs  bytecode_analysis.rs  bytecode_call.rs  bytecode_function.rs  bytecode_types.rs  compiled_module.rs  compiled_script.rs  embedding.rs  error.rs  host.rs  lexer.rs  lexer_support.rs  lib.rs  native_call.rs  ownership.rs  parser.rs  parser_assignment.rs  parser_binary.rs  parser_expression.rs  parser_statement.rs  prelude.rs  regexp_syntax.rs  runtime.rs  runtime_assertions.rs  runtime_assignment.rs  runtime_binding_location.rs  runtime_bytecode.rs  runtime_bytecode_control.rs  runtime_bytecode_ops.rs  runtime_bytecode_state.rs  runtime_completion.rs  runtime_declaration.rs  (+50 more)
src/api/: mod.rs  (+10 more)
src/regress/: Cargo.toml  VENDORED-SOURCE-SHA256SUMS  VENDORED.md
src/regress/src/: api.rs  classicalbacktrack.rs  emit.rs  indexing.rs  insn.rs  ir.rs  optimizer.rs  parse.rs  pikevm.rs  startpredicate.rs  unicode.rs
tools/regexp-unicode-gen/: Cargo.toml
tools/regexp-unicode-gen/src/: binary.rs  case.rs  emit.rs  error.rs  lib.rs  main.rs  manifest.rs  strings.rs  ucd.rs  values.rs
tools/regexp-unicode-gen/tests/: generator_contract.rs
(+2895 files in other folders)
