# The root engine and its dependency-light RegExp library share one workspace.
# Maintenance tooling is a workspace member so formatting and explicit tool
# checks remain reproducible, but it is not a default build member.
[workspace]
members = ["crates/velum-regexp", "tools/regexp-unicode-gen"]
default-members = [".", "crates/velum-regexp"]
exclude = ["cli", "runner", "src/regress"]

[package]
name = "velum"
version = "0.2.130"
edition = "2024"
license = "MIT"
repository = "https://github.com/surveria/velum"
description = "An independent, embeddable ECMAScript bytecode engine written in Rust."
readme = "README.md"

[lib]
name = "velum"
path = "src/lib.rs"

[[bin]]
name = "velum"
path = "src/bin/velum.rs"

# The engine is a standalone, dependency-light crate. The interactive CLI and
# test/benchmark runner live in separate nested workspaces so their heavier
# dependencies do not become engine dependencies.
[dependencies]
anyhow = "1"
icu_casemap = "2.2"
icu_locale = "2.2"
jiff-tzdb = "0.1.8"
num-bigint = "0.4"
num-traits = "0.2"
parking_lot = "0.12"
regress = { path = "src/regress", default-features = false, features = ["prohibit-unsafe", "std", "utf16"] }
temporal_rs = { version = "0.2.4", default-features = false, features = ["compiled_data", "float64_representable_durations", "std"] }
thiserror = "2"
unicode-ident = "1"
unicode-normalization = "0.1"
unicode-segmentation = "1.13"

[dev-dependencies]
velum-regexp = { path = "crates/velum-regexp" }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
redundant_pub_crate = "deny"
too_many_lines = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
