# The dependency-light engine and RegExp library remain the default members.
# Optional macro/runtime adapters and maintenance tooling share the workspace
# for formatting and explicit checks without entering the default build.
[workspace]
members = [
    "crates/velum-macros",
    "crates/velum-regexp",
    "crates/velum-tokio",
    "examples",
    "tools/regexp-unicode-gen",
]
default-members = [".", "crates/velum-regexp"]
exclude = ["cli", "runner", "src/regress"]

[package]
name = "velum"
version = "0.2.130"
edition = "2024"
license = "MIT"
repository = "https://github.com/surveria/velum"
description = "An independent, embeddable ECMAScript bytecode engine written in Rust."
readme = "README.md"
autoexamples = false

[lib]
name = "velum"
path = "src/lib.rs"

[[bin]]
name = "velum"
path = "src/bin/velum.rs"
required-features = ["std"]

[features]
default = ["std"]
host-macros = ["std", "dep:velum-macros"]
std = [
    "dep:anyhow",
    "dep:parking_lot",
    "anyhow/std",
    "num-bigint/std",
    "num-traits/std",
    "temporal_rs/compiled_data",
    "temporal_rs/std",
    "thiserror/std",
    "unicode-normalization/std",
    "velum-regexp/std",
]

# The engine is a standalone, dependency-light crate. The interactive CLI and
# test/benchmark runner live in separate nested workspaces so their heavier
# dependencies do not become engine dependencies.
[dependencies]
anyhow = { version = "1", default-features = false, optional = true }
foldhash = { version = "0.2", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = ["default-hasher"] }
icu_casemap = { version = "2.2", default-features = false, features = ["compiled_data"] }
icu_locale = { version = "2.2", default-features = false, features = ["compiled_data"] }
jiff-tzdb = "0.1.8"
num-bigint = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
parking_lot = { version = "0.12", optional = true }
spin = { version = "0.9", default-features = false, features = ["mutex", "rwlock", "spin_mutex"] }
temporal_rs = { version = "0.2.4", default-features = false, features = ["float64_representable_durations"] }
thiserror = { version = "2", default-features = false }
timezone_provider = { version = "0.2.4", default-features = false }
unicode-ident = "1"
unicode-normalization = { version = "0.1", default-features = false }
unicode-segmentation = "1.13"
velum-regexp = { path = "crates/velum-regexp", default-features = false }
velum-macros = { path = "crates/velum-macros", optional = true }

[dev-dependencies]
regress = { path = "src/regress", default-features = false, features = ["prohibit-unsafe", "std", "utf16"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
redundant_pub_crate = "deny"
too_many_lines = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
