[workspace]

[package]
name = "rsqjs-test-runner"
version = "0.2.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/surveria/rs-quickjs"
description = "Test and benchmark runner for the rs-quickjs engine. Lives in the engine repository as a nested workspace and depends on the local engine crate through its public API."

[[bin]]
name = "rsqjs-test-runner"
path = "src/main.rs"

[dependencies]
rs-quickjs = { path = ".." }
anyhow = "1"
human-yaml = { git = "https://github.com/chertov/human-yaml.git", rev = "1b83913343223316678776f0c5329d4c577df0f5" }
image = { version = "0.24", default-features = false, features = ["jpeg"] }
plotters = "0.3"
rquickjs = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = "0.21.0"

[features]
# Enables an in-process QuickJS reference (via the `rquickjs` binding) used by
# the benchmark runner to compare execution against the original engine.
reference-quickjs = ["dep:rquickjs"]

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
redundant_pub_crate = "deny"
too_many_lines = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
