[workspace]

[package]
name = "velum-fuzzilli-target"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "velum-fuzzilli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
velum = { path = "../.." }

[build-dependencies]
cc = "1"

[profile.release]
debug-assertions = true
overflow-checks = true
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
redundant_pub_crate = "deny"
too_many_lines = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
