[package]
name = "velum-regexp-unicode-gen"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/surveria/velum"
description = "Deterministic Unicode table generator for velum-regexp."
publish = false

[dependencies]
sha2 = "0.10"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
mem_forget = "deny"
redundant_pub_crate = "deny"
too_many_lines = "deny"
cast_possible_truncation = "deny"
cast_sign_loss = "deny"
